--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           <li>Bowtie (needed for paired end edge creation)</li>
         </ul>
         <p>For information on how to use Contiguity please see
-          Contiguity_manual.pdf available at <a href="https://github.com/mjsull/Contiguity">https://github.com/mjsull/Contiguity</a></p>
+          manual.pdf available at <a href="https://github.com/mjsull/Contiguity">https://github.com/mjsull/Contiguity</a></p>
       </section>
     </div>
     <!--[if !IE]><script>fixScale(document);</script><![endif]-->
