--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           <a name="contiguity" class="anchor" href="#contiguity"><span class="octicon octicon-link"></span></a>Contiguity</h1>
         <p>Tool for visualising PacBio and Illumina assemblies, exploring
           assembly graphs and scaffolding.</p>
-        <img alt="contiguity" src="images/contiguity.png">
+        <img alt="contiguity" src="https://github.com/mjsull/Contiguity/blob/gh-pages/images/contiguity.png">
         <p>Requirements</p>
         <ul>
           <li>Python 2.7+</li>
