--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           <li>Python 2.7+</li>
           <li>NCBI-BLAST (needed for overlap edge creation and automatic
             comparison generation)</li>
-          <li>Bowtie (needed for paired end edge creation)</li>
+          <li>Bowtie 2 (needed for paired end edge creation)</li>
         </ul>
         <p>For information on how to use Contiguity please see
           manual.pdf available at <a href="https://github.com/mjsull/Contiguity">https://github.com/mjsull/Contiguity</a></p>
