--- a/index.html
+++ b/index.html
@@ -40,12 +40,13 @@
         <p>Requirements</p>
         <ul>
           <li>Python 2.7+</li>
-          <li>NCBI-BLAST (needed for overlap edge creation and automatic
+          <li>NCBI-BLAST+ (needed for overlap edge creation and automatic
             comparison generation)</li>
           <li>Bowtie 2 (needed for paired end edge creation)</li>
         </ul>
-        <p>For information on how to use Contiguity please see
-          manual.pdf available at <a href="https://github.com/mjsull/Contiguity">https://github.com/mjsull/Contiguity</a></p>
+        <p>For information on how to install and use Contiguity please see
+          Contiguity_manual.pdf available at <a href="https://github.com/mjsull/Contiguity/raw/master/Contiguity_manual.pdf
+">https://github.com/mjsull/Contiguity</a></p>
       
     </div>
     <br>
