--- a/reference.html
+++ b/reference.html
@@ -13,7 +13,7 @@ Released   : 20130902
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Contiguity - home</title>
+<title>Contiguity - Citing</title>
 <meta name="keywords" content="" />
 <meta name="description" content="" />
 <link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600,700,900" rel="stylesheet" />
@@ -32,11 +32,11 @@ Released   : 20130902
 		</div>
 		<div id="menu">
 			<ul>
-				<li class="current_page_item"><a href="http://mjsull.github.io/Contiguity" accesskey="1" title="">Homepage</a></li>
+				<li><a href="http://mjsull.github.io/Contiguity" accesskey="1" title="">Homepage</a></li>
 				<li><a href="files.html" accesskey="2" title="">Downloads</a></li>
 				<li><a href="tutorials.html" accesskey="3" title="">Tutorials</a></li>
 				<li><a href="videos.html" accesskey="4" title="">Videos</a></li>
-				<li><a href="reference.html" accesskey="5" title="">Citing</a></li>
+				<li class="current_page_item"><a href="reference.html" accesskey="5" title="">Citing</a></li>
 			</ul>
 		</div>
 	</div>
@@ -49,14 +49,15 @@ Released   : 20130902
 				<h2>Contiguity</h2>
 				<span class="byline">Contig adjacency graph construction and visualisation.</span>
 			</div>
-			<p> Contiguity is interactive software for the visualization and manipulation of de novo genome assemblies. Contiguity creates and displays information on contig adjacency which is contextualized by the simultaneous display of a comparison between assembled contigs and reference sequence. It is also useful in guiding manual closure of long read sequence assemblies. Contiguity is an open source application, implemented using Python and the Tkinter GUI package that can run on any Unix, OSX and Windows operating system. It has been designed and optimized for bacterial assemblies.<br /><br />
-			Contiguity was developed at the <a href="http://beatsonlab.com">Beatson Microbial Genomics Lab</a>.<br /><br />
-			For installation instructions, manual, example files and binaries go to <a href="files.html">Downloads.</a><br />
-			For a quick start guide and more in depth tutorials go to <a href="tutorials.html">Tutorials.</a><br />
-			For a video overview of Contiguity and video tutorials visit <a href="videos.html">Videos.</a><br />
-			For information on how to cite Contiguity visit <a href="reference.html">Citing.</a><br /><br />
-			If you have any problems with Contiguity or and feature suggestions post <a href="https://github.com/mjsull/Contiguity/issues">here.</a>
-			I will endeavour to get back to you as soon as possible.<br /><br />
+			<p> If you use Contiguity in a paper please cite.
+			<pre> Mitchell J Sullivan, Nouri Ben Zakour, Brian Forde, Mitchell Stanton-Cook & Scott A Beatson*
+Contiguity: Contig adjacency graph construction and visualisation
+https://github.com/BeatsonLab-MicrobialGenomics/Contiguity </pre>
+			If you have constructed an adjacency graph using Contiguity you should also cite<br />
+			<a href="http://dx.doi.org/10.6084/m9.figshare.979190">khmer</a><br />
+			<a href="http://www.ncbi.nlm.nih.gov/pubmed/22388286">Bowtie2</a><br />
+			<a href="http://www.ncbi.nlm.nih.gov/pubmed/20003500?dopt=Citation">NCBI-BLAST+</a>
+			<br /><br />
                 Email: <a href="mailto:mjsull@gmail.com">mjsull@gmail.com</a>	<br /><br />
                 <a href="https://twitter.com/mjsull1" class="twitter-follow-button" data-show-count="false" data-size="large">Follow @mjsull1</a>
 					<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script></p>
