--- a/tutorials.html
+++ b/tutorials.html
@@ -42,7 +42,7 @@ Released   : 20130902
 	</div>
 	<div id="main">
 		<div id="banner">
-			<img src="images/Contiguity.png" alt="" class="image-full" />
+			<img src="images/contiguity.png" alt="" class="image-full" />
 		</div>
 		<div id="welcome">
 			<div class="title">
