fixed citing tag

--- a/files.html
+++ b/files.html
@@ -36,7 +36,7 @@ Released   : 20130902
 				<li class="current_page_item"><a href="files.html" accesskey="2" title="">Downloads</a></li>
 				<li><a href="tutorials.html" accesskey="3" title="">Tutorials</a></li>
 				<li><a href="videos.html" accesskey="4" title="">Videos</a></li>
-				<li><a href="reference.html" accesskey="5" title="">Reference</a></li>
+				<li><a href="reference.html" accesskey="5" title="">Citing</a></li>
 			</ul>
 		</div>
 	</div>
