--- a/files.html
+++ b/files.html
@@ -56,26 +56,26 @@ Released   : 20130902
 			If you intend on creating graphs or generating comparisons from within Contiguity please ensure both are installed and in your path. </p>
 			<hr>
 			<h3> Manual </h3>
-			<p> Contiguity Manual - <a href="https://github.com/mjsull/Contiguity/releases/download/v1.0.3/Contiguity_manual.pdf" target="_blank" onclick=_gaq.push(['_trackEvent','Contiguity','Contiguity_man','Contiguity_manual']);>PDF</a>
+			<p> Contiguity Manual - <a href="https://github.com/mjsull/Contiguity/releases/download/v1.0.3/Contiguity_manual.pdf" target="_blank" onclick="_gaq.push(['_trackEvent','Contiguity','Contiguity_man','Contiguity_manual']);">PDF</a>
 			<hr>
 			<h3> pip </h3>
 			<p> To install with pip please follow directions in the <a href="https://github.com/mjsull/Contiguity/blob/master/README.rst" target="_blank">README</a></p>
 			<hr>
 			<h3> Windows </h3>
-			<p> Contiguity - <a href="https://github.com/mjsull/Contiguity/releases/download/v1.0.3/Contiguity_win_103.exe" target="_blank" onclick=_gaq.push(['_trackEvent','Contiguity','Contiguity_exe','Contiguity_win']);>Contiguity_win_103.exe</a> <br />
+			<p> Contiguity - <a href="https://github.com/mjsull/Contiguity/releases/download/v1.0.3/Contiguity_win_103.exe" target="_blank" onclick="_gaq.push(['_trackEvent','Contiguity','Contiguity_exe','Contiguity_win']);">Contiguity_win_103.exe</a> <br />
 			Khmer does not currently work on Windows, graphs are instead built using a Python dictionary, this may lead to performance issues. We recommend using OSX or Linux to build CAGs.</p>
 			<hr>
 			<h3> OSX  </h3>
-			<p> Contiguity - <a href="#" target="_blank" onclick=_gaq.push(['_trackEvent','Contiguity','Contiguity_exe','Contiguity_osx']);>Coming soon - for now use pip.</a></p>
+			<p> Contiguity - <a href="#" target="_blank" onclick="_gaq.push(['_trackEvent','Contiguity','Contiguity_exe','Contiguity_osx']);">Coming soon - for now use pip.</a></p>
 			<hr>
 			<h3> Linux </h3>
-			<p> Contiguity - <a href="#" target="_blank" onclick=_gaq.push(['_trackEvent','Contiguity','Contiguity_exe','Contiguity_gnu']);>Coming soon - for now use pip.</a></p>
+			<p> Contiguity - <a href="#" target="_blank" onclick="_gaq.push(['_trackEvent','Contiguity','Contiguity_exe','Contiguity_gnu']);">Coming soon - for now use pip.</a></p>
 			<hr>
 			<h3> Example files </h3>
 			<h4> Example 1 </h4>
-			<p> CAG of <i>E. coli</i> str. UTI89 assembled from Illumina data. - <a href=https://github.com/mjsull/Contiguity/releases/download/v1.0.3/example1.zip" target="_blank" onclick="_gaq.push(['_trackEvent','Contiguity','Contiguity_exa','Contiguity_ex1']);>example1.zip</a></p>
+			<p> CAG of <i>E. coli</i> str. UTI89 assembled from Illumina data. - <a href="https://github.com/mjsull/Contiguity/releases/download/v1.0.3/example1.zip" target="_blank" onclick="_gaq.push(['_trackEvent','Contiguity','Contiguity_exa','Contiguity_ex1']);">example1.zip</a></p>
 			<h4> Example 2 </h4>
-			HGAP assembly of <i>E. coli</i> str. EC958 - <a href="#" target="_blank" onclick=_gaq.push(['_trackEvent','Contiguity','Contiguity_exa','Contiguity_ex2']);>Example coming soon.</a></p>
+			HGAP assembly of <i>E. coli</i> str. EC958 - <a href="#" target="_blank" onclick="_gaq.push(['_trackEvent','Contiguity','Contiguity_exa','Contiguity_ex2']);">Example coming soon.</a></p>
 			<hr>
 		</div>
 		<div id="copyright">
@@ -84,14 +84,17 @@ Released   : 20130902
 		</div>
 	</div>
 </div>
-<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+<script type="text/javascript">
 
-  ga('create', 'UA-60488885-1', 'auto');
-  ga('send', 'pageview');
+  var _gaq = _gaq || [];
+  _gaq.push(['_setAccount', 'UA-60488885-1']);
+  _gaq.push(['_trackPageview']);
+
+  (function() {
+    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+  })();
 
 </script>	
 </body>
