--- a/videos.html
+++ b/videos.html
@@ -52,11 +52,7 @@ Released   : 20130902
 			<iframe width="640" height="360" src="https://www.youtube.com/embed/-GR2aRb8Zok?feature=player_detailpage" frameborder="0" allowfullscreen></iframe>
 			<h4> Overview of Contiguity</h4>
 			<hr>
-
-			<p> More videos coming soon. <br /><br />
-			Contact: <a href="mailto:mjsull@gmail.com">mjsull@gmail.com</a>	<br /><br />
-                <a href="https://twitter.com/mjsull1" class="twitter-follow-button" data-show-count="false" data-size="large">Follow @mjsull1</a>
-					<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script></p>
+			<p> More videos coming soon. <br /><br /></p>
 		</div>
 		<div id="copyright">
 			<span>&copy; Mitchell J Sullivan</span>
