website updated for new release

--- a/files.html
+++ b/files.html
@@ -58,18 +58,20 @@ Released   : 20130902
 			<h3> Manual </h3>
 			<p> Contiguity Manual - <a href="https://github.com/mjsull/Contiguity/releases/download/v1.0.3/Contiguity_manual.pdf" target="_blank" onclick="_gaq.push(['_trackEvent','Contiguity','Contiguity_man','Contiguity_manual']);">PDF</a>
 			<hr>
-			<h3> pip </h3>
-			<p> To install with pip please follow directions in the <a href="https://github.com/mjsull/Contiguity/blob/master/README.rst" target="_blank">README</a></p>
-			<hr>
 			<h3> Windows </h3>
-			<p> Contiguity - <a href="https://github.com/mjsull/Contiguity/releases/download/v1.0.3/Contiguity_win_103.exe" target="_blank" onclick="_gaq.push(['_trackEvent','Contiguity','Contiguity_exe','Contiguity_win']);">Contiguity_win_103.exe</a> <br />
+			<p> Contiguity - <a href="https://github.com/mjsull/Contiguity/releases/download/v1.0.4/Contiguity_1.0.4_win.zip" target="_blank" onclick="_gaq.push(['_trackEvent','Contiguity','Contiguity_exe','Contiguity_win']);">Contiguity_1.0.4_win.zip</a> <br />
 			Khmer does not currently work on Windows, graphs are instead built using a Python dictionary, this may lead to performance issues. We recommend using OSX or Linux to build CAGs.</p>
 			<hr>
-			<h3> OSX  </h3>
-			<p> Contiguity - <a href="#" target="_blank" onclick="_gaq.push(['_trackEvent','Contiguity','Contiguity_exe','Contiguity_osx']);">Coming soon - for now use pip.</a></p>
+			<h3> OSX </h3>
+			<p> Contiguity - <a href="https://github.com/mjsull/Contiguity/releases/download/v1.0.4/Contiguity_1.0.4_OSX.zip" target="_blank" onclick="_gaq.push(['_trackEvent','Contiguity','Contiguity_exe','Contiguity_osx']);">Contiguity_1.0.4_OSX_zip.</a></p>
 			<hr>
 			<h3> Linux </h3>
-			<p> Contiguity - <a href="#" target="_blank" onclick="_gaq.push(['_trackEvent','Contiguity','Contiguity_exe','Contiguity_gnu']);">Coming soon - for now use pip.</a></p>
+			<p> Contiguity - <a href="https://github.com/mjsull/Contiguity/releases/download/v1.0.4/Contiguity_1.0.4_linux.tar.gz" target="_blank" onclick="_gaq.push(['_trackEvent','Contiguity','Contiguity_exe','Contiguity_gnu']);">Contiguity_1.0.4_linux.tar.gz.</a></p>
+			<hr>
+			<h3> Python script </h3>
+			<p> Contiguity - <a href="https://github.com/mjsull/Contiguity/releases/download/v1.0.4/Contiguity.py" target="_blank"
+			onclick="_gaq.push(['_trackEvent','Contiguity','Contiguity_exe','Contiguity_py']);">Contiguity.py.</a> <br />
+			Contiguity can also be run as a Python script - in addition to BLAST and Bowtie, this requires the Python library Khmer to be installed.</p>
 			<hr>
 			<h3> Example files </h3>
 			<h4> Example 1 </h4>
