--- a/index.html
+++ b/index.html
@@ -68,6 +68,11 @@ Released   : 20130902
 			</div>
 			<ul class="style1">
 				<li class="first">
+					<p class="date"><a href="#">September<b>15</b></a></p>
+					<h3>New release.</h3>
+					<p><a href="#">GFA support, fixes to graph construction.</a></p>
+				</li>
+                <li>
 					<p class="date"><a href="#">April<b>24</b></a></p>
 					<h3>Updated website.</h3>
 					<p><a href="#">Included tutorials and executables.</a></p>
